--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -100,6 +100,29 @@ nav.stroke ul li a:hover:after {
     text-transform: none!important;
 }
 
+ul.category-sub-menu li a{
+    font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    color: #555;
+    display: block;
+    font-size: 17px;
+    text-transform: capitalize;
+    line-height: 35px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    text-decoration: none;
+}
+
+ul.category-sub-menu li a:hover {
+    color: #04ccfc !important;
+}
+
+
+ul.category-sub-menu{
+    list-style-type: none;
+}
+
 /* CARD */
 .card:hover {
     border: 5px;
