--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -62,6 +62,12 @@ table, th, td {
     }
 }
 
+@media only screen and (max-width: 568px) {
+    #navbar .nav .nav-link{
+        margin-left: 0px;
+    }
+}
+
 #navbar .nav .nav-item .active{
     background: none;
     border-bottom: 2px solid #04ccfc;
