--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -65,6 +65,7 @@ table, th, td {
 @media only screen and (max-width: 568px) {
     #navbar .nav .nav-link{
         margin-left: 0px;
+        font-size: 13px;
     }
 }
 
