Fix thumbnails size

--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -504,7 +504,7 @@ ul.category-sub-menu{
 
 /*image*/
 .thumbnail{
-    width: 200px;
+    width: 300px;
     height: 200px;
     overflow: hidden;
     margin: auto;
@@ -512,8 +512,8 @@ ul.category-sub-menu{
 }
 
 .thumbnail img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    max-height: 200px;
 }
 
 
