--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -872,10 +872,6 @@ main-page-contact-form .contact-form{
 
 
 
-
-
-
-
 .scrollFade {
     opacity: 1;
     pointer-events: all;
@@ -920,5 +916,40 @@ main-page-contact-form .contact-form{
 .contact1-pic {
     will-change: transform;
     transform: perspective(300px) rotateX(0deg) rotateY(0deg);
+}
+
+
+
+.u-fade-type-up{
+    transform: translateY(-100px);
+    opacity: 0;
+}
+
+.u-fade-type-up.is-active{
+    transition: 2s;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.u-fade-type-down{
+    transform: translateY(100px);
+    opacity: 0;
+}
+
+.u-fade-type-down.is-active{
+    transition: 1.5s;
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.u-fade-type-left{
+    transform: translateX(-100px);
+    opacity: 0;
+}
+
+.u-fade-type-left.is-active{
+    transition: 1s;
+    transform: translateX(0);
+    opacity: 1;
 }
 
