--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -2,6 +2,8 @@ html {
     scroll-behavior: smooth;
 }
 
+.grecaptcha-badge { visibility: hidden !important; }
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
